[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Enemys/enemy_1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy_1.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Fire.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 287, 264 )

[node name="Enemy_1" type="Area2D"]
collision_layer = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -3, 12, -14, -2, -5, -9, 6, -9, 15, -2, 4, 12 )

[node name="Player_detector" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_detector"]
position = Vector2( 1, 264 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.3
autostart = true

[node name="Fire" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -18 )
rotation = 3.14159

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.5, -3 )
scale = Vector2( 1.85, 1.5 )
[connection signal="area_entered" from="." to="." method="_on_Enemy_1_area_entered"]
[connection signal="area_entered" from="Player_detector" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
